--- a/NeuralNetMigrations/NeuralNetMigrations.csproj
+++ b/NeuralNetMigrations/NeuralNetMigrations.csproj
@@ -1,24 +1,21 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="9.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\NeuralNetApi\NeuralNetApi.csproj" />
     <ProjectReference Include="..\NeuralNetApplicationServices\NeuralNetApplicationServices.csproj" />
     <ProjectReference Include="..\NeuralNetDomainService\NeuralNetDomainService.csproj" />
     <ProjectReference Include="..\NeuralNetDomain\NeuralNetDomain.csproj" />
     <ProjectReference Include="..\NeuralNetInfrastructure\NeuralNetInfrastructure.csproj" />
+    <ProjectReference Include="..\WebService\WebService.csproj" />
   </ItemGroup>
 
 </Project>
