--- a/NeuralNetApi/NeuralNetApi.csproj
+++ b/NeuralNetApi/NeuralNetApi.csproj
@@ -5,13 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Microsoft.Extensions.Hosting.Abstractions">
-      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.hosting.abstractions\2.1.1\lib\netstandard2.0\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
-    </Reference>
+    <Compile Remove="Private\**" />
+    <EmbeddedResource Remove="Private\**" />
+    <None Remove="Private\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Private\" />
+    <Reference Include="Microsoft.Extensions.Hosting.Abstractions">
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.hosting.abstractions\2.1.1\lib\netstandard2.0\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
