Add new infrastructure for MySQL database

--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "server=localhost;database=neuralNetTest;uid=neuralnettestuser;pwd=P@ssw0rd"
 }
