Added asynchrony, repositories, model configurations

--- a/NeuralNetInfrastructure/NeuralNetInfrastructure.csproj
+++ b/NeuralNetInfrastructure/NeuralNetInfrastructure.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SchemaScript.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0">
