--- a/WebService/appsettings.json
+++ b/WebService/appsettings.json
@@ -5,5 +5,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "server=localhost;database=neuralNetTest;uid=neuralnettestuser;pwd=P@ssw0rd"
+  "connectionString": "server=localhost;database=neuralNetTest;uid=neuralnettestuser;pwd=P@ssw0rd",
+  "historicalPriceUrl": "https://financialmodelingprep.com/api/v3/historical-price-full"
 }
